Embeded-C/NodeMcu_Boards/hello_esp32/build/log/idf_py_stdout_output_338538
[1/12] Linking C static library esp-idf/wifi_provisioning/libwifi_provisioning.a
[2/12] Performing build step for 'bootloader'
[1/1] cd /home/admin/Documents/Projects/Embedded/Programmer_C/NodeMcu_Boards/hello_esp32/build/bootloader/esp-idf/esptool_py && /home/admin/.espressif/python_env/idf5.1_py3.10_env/bin/python /home/admin/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/admin/Documents/Projects/Embedded/Programmer_C/NodeMcu_Boards/hello_esp32/build/bootloader/bootloader.bin
Bootloader binary size 0x6720 bytes. 0x8e0 bytes (8%) free.
[3/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj 
/home/admin/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-2509-gcfef24863f\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DUNITY_INCLUDE_CONFIG_H -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/admin/Documents/Projects/Embedded/Programmer_C/NodeMcu_Boards/hello_esp32/build/config -I/home/admin/esp/esp-idf/components/newlib/platform_include -I/home/admin/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/admin/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/admin/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/admin/esp/esp-idf/components/freertos/esp_additions/include -I/home/admin/esp/esp-idf/components/esp_hw_support/include -I/home/admin/esp/esp-idf/components/esp_hw_support/include/soc -I/home/admin/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/admin/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/admin/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/admin/esp/esp-idf/components/heap/include -I/home/admin/esp/esp-idf/components/log/include -I/home/admin/esp/esp-idf/components/soc/include -I/home/admin/esp/esp-idf/components/soc/esp32/. -I/home/admin/esp/esp-idf/components/soc/esp32/include -I/home/admin/esp/esp-idf/components/hal/esp32/include -I/home/admin/esp/esp-idf/components/hal/include -I/home/admin/esp/esp-idf/components/hal/platform_port/include -I/home/admin/esp/esp-idf/components/esp_rom/include -I/home/admin/esp/esp-idf/components/esp_rom/include/esp32 -I/home/admin/esp/esp-idf/components/esp_rom/esp32 -I/home/admin/esp/esp-idf/components/esp_common/include -I/home/admin/esp/esp-idf/components/esp_system/include -I/home/admin/esp/esp-idf/components/esp_system/port/soc -I/home/admin/esp/esp-idf/components/esp_system/port/include/private -I/home/admin/esp/esp-idf/components/xtensa/include -I/home/admin/esp/esp-idf/components/xtensa/esp32/include -I/home/admin/esp/esp-idf/components/lwip/include -I/home/admin/esp/esp-idf/components/lwip/include/apps -I/home/admin/esp/esp-idf/components/lwip/include/apps/sntp -I/home/admin/esp/esp-idf/components/lwip/lwip/src/include -I/home/admin/esp/esp-idf/components/lwip/port/esp32/include -I/home/admin/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/admin/esp/esp-idf/components/esp_ringbuf/include -I/home/admin/esp/esp-idf/components/efuse/include -I/home/admin/esp/esp-idf/components/efuse/esp32/include -I/home/admin/esp/esp-idf/components/driver/include -I/home/admin/esp/esp-idf/components/driver/deprecated -I/home/admin/esp/esp-idf/components/driver/esp32/include -I/home/admin/esp/esp-idf/components/esp_pm/include -I/home/admin/esp/esp-idf/components/mbedtls/port/include -I/home/admin/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/admin/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/admin/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/admin/esp/esp-idf/components/esp_app_format/include -I/home/admin/esp/esp-idf/components/bootloader_support/include -I/home/admin/esp/esp-idf/components/bootloader_support/bootloader_flash/include -I/home/admin/esp/esp-idf/components/esp_partition/include -I/home/admin/esp/esp-idf/components/app_update/include -I/home/admin/esp/esp-idf/components/spi_flash/include -I/home/admin/esp/esp-idf/components/pthread/include -I/home/admin/esp/esp-idf/components/esp_timer/include -I/home/admin/esp/esp-idf/components/app_trace/include -I/home/admin/esp/esp-idf/components/esp_event/include -I/home/admin/esp/esp-idf/components/nvs_flash/include -I/home/admin/esp/esp-idf/components/esp_phy/include -I/home/admin/esp/esp-idf/components/esp_phy/esp32/include -I/home/admin/esp/esp-idf/components/vfs/include -I/home/admin/esp/esp-idf/components/esp_netif/include -I/home/admin/esp/esp-idf/components/wpa_supplicant/include -I/home/admin/esp/esp-idf/components/wpa_supplicant/port/include -I/home/admin/esp/esp-idf/components/wpa_supplicant/esp_supplicant/include -I/home/admin/esp/esp-idf/components/esp_wifi/include -I/home/admin/esp/esp-idf/components/unity/include -I/home/admin/esp/esp-idf/components/unity/unity/src -I/home/admin/esp/esp-idf/components/cmock/CMock/src -I/home/admin/esp/esp-idf/components/console -I/home/admin/esp/esp-idf/components/http_parser -I/home/admin/esp/esp-idf/components/esp-tls -I/home/admin/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/admin/esp/esp-idf/components/esp_adc/include -I/home/admin/esp/esp-idf/components/esp_adc/interface -I/home/admin/esp/esp-idf/components/esp_adc/esp32/include -I/home/admin/esp/esp-idf/components/esp_adc/deprecated/include -I/home/admin/esp/esp-idf/components/esp_eth/include -I/home/admin/esp/esp-idf/components/esp_gdbstub/include -I/home/admin/esp/esp-idf/components/esp_gdbstub/xtensa -I/home/admin/esp/esp-idf/components/esp_gdbstub/esp32 -I/home/admin/esp/esp-idf/components/esp_hid/include -I/home/admin/esp/esp-idf/components/tcp_transport/include -I/home/admin/esp/esp-idf/components/esp_http_client/include -I/home/admin/esp/esp-idf/components/esp_http_server/include -I/home/admin/esp/esp-idf/components/esp_https_ota/include -I/home/admin/esp/esp-idf/components/esp_lcd/include -I/home/admin/esp/esp-idf/components/esp_lcd/interface -I/home/admin/esp/esp-idf/components/protobuf-c/protobuf-c -I/home/admin/esp/esp-idf/components/protocomm/include/common -I/home/admin/esp/esp-idf/components/protocomm/include/security -I/home/admin/esp/esp-idf/components/protocomm/include/transports -I/home/admin/esp/esp-idf/components/esp_local_ctrl/include -I/home/admin/esp/esp-idf/components/esp_psram/include -I/home/admin/esp/esp-idf/components/espcoredump/include -I/home/admin/esp/esp-idf/components/espcoredump/include/port/xtensa -I/home/admin/esp/esp-idf/components/wear_levelling/include -I/home/admin/esp/esp-idf/components/sdmmc/include -I/home/admin/esp/esp-idf/components/fatfs/diskio -I/home/admin/esp/esp-idf/components/fatfs/vfs -I/home/admin/esp/esp-idf/components/fatfs/src -I/home/admin/esp/esp-idf/components/idf_test/include -I/home/admin/esp/esp-idf/components/idf_test/include/esp32 -I/home/admin/esp/esp-idf/components/ieee802154/include -I/home/admin/esp/esp-idf/components/json/cJSON -I/home/admin/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/admin/esp/esp-idf/components/perfmon/include -I/home/admin/esp/esp-idf/components/spiffs/include -I/home/admin/esp/esp-idf/components/ulp/ulp_common/include -I/home/admin/esp/esp-idf/components/ulp/ulp_common/include/esp32 -I/home/admin/esp/esp-idf/components/wifi_provisioning/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/admin/Documents/Projects/Embedded/Programmer_C/NodeMcu_Boards/hello_esp32=. -fmacro-prefix-map=/home/admin/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -c /home/admin/Documents/Projects/Embedded/Programmer_C/NodeMcu_Boards/hello_esp32/main/hello_world_main.c
/home/admin/Documents/Projects/Embedded/Programmer_C/NodeMcu_Boards/hello_esp32/main/hello_world_main.c: In function 'app_main':
/home/admin/Documents/Projects/Embedded/Programmer_C/NodeMcu_Boards/hello_esp32/main/hello_world_main.c:26:9: error: 'button_raw' undeclared (first use in this function); did you mean 'button_state'?
   26 |     if (button_raw != button_state) {
      |         ^~~~~~~~~~
      |         button_state
/home/admin/Documents/Projects/Embedded/Programmer_C/NodeMcu_Boards/hello_esp32/main/hello_world_main.c:26:9: note: each undeclared identifier is reported only once for each function it appears in
/home/admin/Documents/Projects/Embedded/Programmer_C/NodeMcu_Boards/hello_esp32/main/hello_world_main.c:27:7: error: 'button_last_pressed' undeclared (first use in this function)
   27 |       button_last_pressed = xTaskGetTickCountFromISR();
      |       ^~~~~~~~~~~~~~~~~~~
/home/admin/Documents/Projects/Embedded/Programmer_C/NodeMcu_Boards/hello_esp32/main/hello_world_main.c:34:26: error: 'button_last_state' undeclared (first use in this function); did you mean 'button_state'?
   34 |     if (button_state && !button_last_state) {
      |                          ^~~~~~~~~~~~~~~~~
      |                          button_state
[4/12] No install step for 'bootloader'
ninja: build stopped: subcommand failed.
